fixes-Icon-not-visible-while-hovering-on-button

--- a/styles/portfolio-item.module.css
+++ b/styles/portfolio-item.module.css
@@ -43,7 +43,7 @@
 }
 
 .portfolio__keyword:hover {
-  background-color: white;
+  background-color: #eff6ff;
   color: #000;
 }
 
